--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Roboto&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css">
     <title>Document</title>
 </head>
 <body>
-    <div class="js-animate-rot"><span class="title">무엇이든만들어드립니다</span></div>
+    <div class="js-animate-rot"><span class="red">무엇이든</span><span class="green">만들어</span><span class="yellow">드립니다</span></div>
 </body>
 </html>
