--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="js-animate-rot"><span class="red">무엇이든</span><span class="green">만들어</span><span class="yellow">드립니다</span></div>
+    <div class="wrapper">
+        <div class="js-animate-rot"><span class="red">무엇이든</span><span class="green">만들어</span><span class="yellow">드립니다</span></div>
+        <img class="logo" src="resource/ezgif.com-gif-maker.gif">
+    </div>
 </body>
 </html>
