--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="wrapper">
-        <div class="js-animate-rot"><span class="red">무엇이든</span><span class="green">만들어</span><span class="yellow">드립니다</span></div>
-        <img class="logo" src="resource/ezgif.com-gif-maker.gif">
-    </div>
+    <main>
+        <div class="container">
+            <h1 class="title js-animate-rot"><span class="red">무엇이든</span><span class="green">만들어</span><span class="yellow">드립니다</span></h1>
+        </div>
+    </main>
 </body>
 </html>
