--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Roboto&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="index.js"></script>
     <title>Document</title>
 </head>
 <body>
     <main>
         <div class="container">
-            <h1 class="title js-animate-rot"><span class="red">무엇이든</span><span class="green">만들어</span><span class="yellow">드립니다</span></h1>
+            <div class="title"><span class="one green">무엇이든</span><span class="two red">만들어</span><span class="three blue">드립니다</span></div>
         </div>
     </main>
 </body>
