--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link href="style.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript"src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
-    <script src="https://www.google.com/recaptcha/api.js?render=6LcCUDEaAAAAAEbzA1Ky6XdBtGTWWCMwpYWGNskS"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <title>Document</title>
 </head>
 <body>
     <main>
         <div class="container">
             <div class="title"><span class="one green">무엇이든</span><span class="two red">만들어</span><span class="three blue">드립니다</span></div>
-            <input type="button" value="button" onclick="onClick()">
+            <button class="g-recaptcha" data-sitekey="6LfeSDIaAAAAAPFEmJh4tNGJUr2cnR1AEGrz-1in" data-callback='onClick'>TEST</button>
         </div>
     </main>
 </body>
