--- a/index.html
+++ b/index.html
@@ -14,7 +14,21 @@
     <main>
         <div class="container">
             <div class="title"><span class="one green">무엇이든</span><span class="two red">만들어</span><span class="three blue">드립니다</span></div>
-            <button class="g-recaptcha" data-sitekey="6LfeSDIaAAAAAPFEmJh4tNGJUr2cnR1AEGrz-1in" data-callback='onClick'>TEST</button>
+            <button onclick=openDialog()>만들어주세요!</button>
+        </div>
+        <div id="overlay">
+            <div class="dialog">
+                <div class="dialog-header">
+                    <div class="dialog-title">TITLE</div>
+                    <button class="dialog-close" onclick=closeDialog()>&times;</button>
+                </div>
+                <div class="dialog-body">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, debitis. Vitae tempora saepe quaerat aliquam odio voluptatum adipisci repellat laudantium, sint voluptate ab ut ad illum tempore nemo doloribus. Tempore delectus aspernatur nemo possimus consectetur! Nesciunt explicabo a, fugit culpa porro ab corporis minima et, non quod sunt aliquid eius laudantium impedit libero, assumenda ad cumque corrupti. Sit aperiam eum atque harum cupiditate dolores soluta rerum sint. Officiis vero ipsa quaerat, quis repellendus facere molestias nihil quidem aperiam ab voluptates obcaecati saepe vitae amet facilis dolores unde consectetur laborum nam in sit cupiditate vel natus impedit! Quas, excepturi odio. Error.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam cum beatae vel illo nobis! Saepe quo et perspiciatis iste aspernatur molestiae nostrum similique enim delectus ipsa deserunt, tempora voluptatum provident.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto quod dolores, totam accusantium saepe numquam impedit dolorum eligendi illum labore, doloremque dignissimos facilis officia recusandae, voluptate dicta eos repellendus quia?
+                    <button class="g-recaptcha" data-sitekey="6LfeSDIaAAAAAPFEmJh4tNGJUr2cnR1AEGrz-1in" data-callback='onClick'>보내기</button>
+                </div>
+            </div>
         </div>
     </main>
 </body>
