--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Roboto&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="https://makeanithing.github.io/resource/favicon.png">
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript"src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
